force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/clofor_com_cfs__MgmtMaster__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_ExchangeRateOnlineHelp</customHelpPage>
    <description>為替や管理基準を管理するオブジェクト
Standard Exchange Rate</description>
    <label>為替</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>EXCHANGE RATE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>