force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__ActiveDurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActiveDurance__c</fullName>
    <label>ACTIVE DURANCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TimeDurance</valueSetName>
    </valueSet>
</CustomField>