force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__FXStartTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FXStartTime__c</fullName>
    <label>START TIME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__T24HoursPer30Mins</valueSetName>
    </valueSet>
</CustomField>