force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Exrate_BuyingfromPartner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Exrate_BuyingfromPartner__c</fullName>
    <label>BUYING EX-RATE FROM PARTNER-STANDARD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>