force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Exrate_CCtoDomesticCustomer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Exrate_CCtoDomesticCustomer__c</fullName>
    <label>SELLING EX-RATE FOR CC CUSTOMER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>