force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Exrate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Exrate_End_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>