force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Exrate_fromto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Exrate_fromto__c</fullName>
    <label>EXCHANGE CURRENCY (FROM USD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VND - Vietnam Dong</fullName>
                <default>true</default>
                <label>VND - Vietnam Dong</label>
            </value>
            <value>
                <fullName>KHR - Cambodian Riel</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>KRW - Korean Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>