force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_ExRate_referto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_ExRate_referto__c</fullName>
    <inlineHelpText>Entry to URL of Exchange Rate Information of the local bank you are referring to.</inlineHelpText>
    <label>EX-RATE DATA SOURCE BANK</label>
    <type>Url</type>
</CustomField>