force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Exrate_Validity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Exrate_Validity__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>After creating exchange rate management record, press &apos;Submit for Approval&apos; button. After the review and approval by accounting team, it will be automatically activated.</inlineHelpText>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>