force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__Mgmt_Master_type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mgmt_Master_type__c</fullName>
    <label>MANAGEMENT CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>為替管理</fullName>
                <default>true</default>
                <label>為替管理</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>