force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/fields/clofor_com_cfs__SellingFxRateWMS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellingFxRateWMS__c</fullName>
    <label>SELLING FXRATE FOR WMS CUSTOMER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>