force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/validationRules/clofor_com_cfs__Must_Specify_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Must_Specify_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( clofor_com_cfs__Mgmt_Exrate_fromto__c ))</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Mgmt_Exrate_fromto__c</errorDisplayField>
    <errorMessage>Please select the currency to convert to.</errorMessage>
</ValidationRule>