force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/validationRules/clofor_com_cfs__The_End_Date_must_be_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__The_End_Date_must_be_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__Mgmt_Exrate_End_Date__c &lt;  clofor_com_cfs__Mgmt_Exrate_Start_Date__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Mgmt_Exrate_End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after Start Date</errorMessage>
</ValidationRule>