force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_fromto__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_Start_Date__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_End_Date__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_FowardingtoDomesticCustomer__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_BuyingfromDomstic3rdvendor__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>