force-app/main/default/objects/clofor_com_cfs__MgmtMaster__c/listViews/clofor_com_cfs__effective_exchange.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__effective_exchange</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Mgmt_Master_type__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_End_Date__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_Start_Date__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_Validity__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_FowardingtoDomesticCustomer__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_CCtoDomesticCustomer__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_SellingtoPartner__c</columns>
    <columns>clofor_com_cfs__Mgmt_Exrate_BuyingfromPartner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Mgmt_Exrate_Validity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Effective Exchagne Rate</label>
    <language>ja</language>
</ListView>